--- a/css/components.css
+++ b/css/components.css
@@ -369,7 +369,7 @@
 
 /*Styles for About page */
 .about-hero {
-  background-image: url("https://images.unsplash.com/photo-1492462543947-040389c4a66c?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("https://images.unsplash.com/photo-1492462543947-040389c4a66c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8YWZyaWNhbiUyMHlvdXRofGVufDB8fDB8fHww");
 }
 
 .vision-quote {
