--- a/css/components.css
+++ b/css/components.css
@@ -396,7 +396,7 @@
 
 /* New styles for About page */
 .about-hero {
-  background-image: url("https://images.pexels.com/photos/2406949/pexels-photo-2406949.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-image: url("https://images.unsplash.com/photo-1492462543947-040389c4a66c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8YWZyaWNhbiUyMHlvdXRofGVufDB8fDB8fHww");
 }
 
 .vision-quote {
