--- a/css/layout.css
+++ b/css/layout.css
@@ -23,6 +23,11 @@
   align-items: center;
 }
 
+.logo a{
+  text-decoration: none;
+  color: inherit;
+}
+
 .logo h2 {
   color: var(--color-light);
   margin-bottom: 0;
